[Legacy] Fix overflow on editview scheduler table

--- a/public/legacy/themes/suite8/css/suitep-base/editview.scss
+++ b/public/legacy/themes/suite8/css/suitep-base/editview.scss
@@ -70,6 +70,9 @@ div#searchResults {
   text-align: left;
   width: 100%;
   border-collapse: collapse;
+
+  overflow-y: auto;
+  display: block;
 }
 
 #scheduler .schedulerDiv table {
